feat: add CLI apps and mouse event recorder migration